[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/BlinkingSatellite.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/tesla_emitter3.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "blink"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.133333, 0.980392, 0.0117647, 1 ) ]
}

[node name="BlinkingSatellite" type="Sprite"]
position = Vector2( 18, 129 )
scale = Vector2( 0.5, 0.5 )
z_index = -20
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/blink = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.43051e-06, -11 )
scale = Vector2( 2.2, 2.1 )

[node name="ExtinctionTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="ExtinctionTimer" to="." method="_on_ExtinctionTimer_timeout"]
